--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Asset Event Screen"
+        android:text="Settings"
         android:textSize="18sp"></TextView>
 
 </LinearLayout>
